--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -59,6 +59,22 @@
          </widget>
         </item>
         <item>
+         <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <family>Trebuchet MS</family>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>No. of rows:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QSlider" name="rowCountSlider">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
